<resources>
    <string name="app_name">Filmes Populares</string>

    <!-- Main -->
    <string name="main_toolbar_title">Filmes Populares</string>

    <!-- Item film -->
    <string name="item_movie_rate">Avaliação:</string>
    <string name="item_movie_release_date">Lançamento:</string>
    <string name="text_movie_detail_title">Título</string>
    <string name="movie_detail_film_original_name">Nome Original:</string>
    <string name="movie_detail_film_language">Língua:</string>
    <string name="movie_detail_film_release">Lançamento:</string>
    <string name="movie_detail_film_rate">Avaliação:</string>


    <!-- Error Message -->
    <string name="error_movielist">Erro ao obter a lista de filmes.</string>
    <string name="error_movie_detail">Erro ao obter os dados dos filmes.</string>
    <string name="presenter_response_null_error">Erro de retorno de conexão.</string>
    <string name="presenter_response_failure_error">Falha na chamada da API.</string>
    <string name="error_recycler_empty_network">Lista não carregada. Verifique suas conexões de rede.</string>
    <string name="connection_network">Seu dispositivo parece estar offline. Verifique suas redes.</string>


</resources>
