<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MovieDetail">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_movie_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_movie_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_movie_detail_title"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_movie_detail"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_movie_detail"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="TODO"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_movie_detail_thumb"
                    android:layout_width="230dp"
                    android:layout_height="154dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:contentDescription="TODO"
                    android:scaleType="fitXY" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:textStyle="bold"
                            android:text="@string/movie_detail_film_original_name"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/text_movie_detail_original_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.2"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/black"
                            tools:text="Nome Original"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:textStyle="bold"
                            android:text="@string/movie_detail_film_language"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/text_movie_detail_language"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.2"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/black"
                            tools:text="Língua"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:textStyle="bold"
                            android:text="@string/movie_detail_film_release"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/text_movie_detail_release"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.2"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/black"
                            tools:text="Lançamento"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:textStyle="bold"
                            android:text="@string/movie_detail_film_rate"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/text_movie_detail_rate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.2"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/black"
                            tools:text="Avaliação"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/text_movie_detail_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                tools:text="Era uma vez..." />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>